Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-4847

Can't delete selected characters from FEP using backspace touch button

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.6.1
    • 4.6.0
    • None
    • None
    • 2fa94ee5569c91435e68f578f29a712dcfd37e4f

    Description

      Open Softkeys example.
      Open FileDialog.
      Press "Create new folder" tool button.
      Paint the whole word and click in the lineEdit
      ==> FEP opens with "New folder" text selected
      ==> Cursor is blinking as first thing on line and the whole word is selected
      Press backspace touch button, when cursor is blinking as the last thing on the text line.
      ==> Nothing happens.
      (But actually the selected word is deleted, if you close the FEP, the folder name disappears, OR if
      you type a new character it is added to the beginning and old word is purged)

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              axisnokia axisnokia (Inactive)
              samimeri Sami Merila (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes