Can't delete selected characters from FEP using backspace touch button.

When selection was deleted, the changes where not updated on virtual
keyboard. Added new connection to notify when text has changed.

Task-number: QTBUG-4847
Reviewed-by: Markku Luukkainen

Merge-request: 2149
Signed-off-by: axis <qt-info@nokia.com>